# khabargozin

./: .env.example  .gitignore  Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  pyproject.toml
.cursor/plans/: khabargozin_architecture_plan_ffeaf116.plan.md
app/: __init__.py  audit.py  config.py  main.py
app/admin/: __init__.py  app.py  helpers.py  live.py  operations.py  review.py  stats.py
app/ai/: client.py  guardrails.py  parser.py  prompts.py  schemas.py  style.py
app/clustering/: anchor_selector.py  ann_config.py  confidence.py  conflict_detector.py  embedder.py  event_signature.py  feature_store.py  fingerprint.py  graph_cluster.py  keywords.py  lineage.py  merge.py  merge_published.py  ml_device.py  ner.py  news_type.py  pipeline.py  reranker.py  scorer.py  similarity.py  text_normalize.py  threshold.py  topic_overlap.py  topic_windows.py  vector_search.py
app/db/: session.py
app/fetcher/: base.py  factory.py  ica_client.py  media_filter.py  telethon_client.py
app/publisher/: bot.py  duplicate_guard.py  formatter.py  hold.py  outbox.py  reconcile.py  retraction.py  retraction_state.py  (+4 more)
docs/: admin_guide.md  ica_api_notes.md  outbox_reconcile.md
migrations/: env.py  script.py.mako
scripts/: _util.py  ai_dry_run.py  dry_run_publish.py  e2e_smoke.py  export_training_data.py  ica_spike.py  inspect_cluster.py  inspect_source.py  kpi_report.py  reconcile_outbox.py  reembed_all.py  reprocess_cluster.py  retry_ai_failed.py  retry_publish.py  seed_sources.py  setup_telegram.py  setup_test_db.py
tests/: conftest.py  test_matrix.md
(+74 files in other folders)
